# Intis-Telecom-SMSAdmin

./: .gitignore  CHANGELOG  CMakeLists.txt  FindBoostPO.cmake  FindCppunit.cmake  FindCurl.cmake  FindLibXML++.cmake  README  Toolchain-win32-i686-w64-mingw32.cmake  Toolchain-x86_64-centos65-linux-gnu.cmake  global.cmake.h  main.cpp  sms16gapi.so.cmake  sms16xapi.so.cmake
doc/: config_example.cfn  config_json_example.cfn  config_xml_example.cfn
doc/html/ru/: build_const_n_params.html  comand_line_params.html  config_file.html  index.html  log_format.html  Параметры_командной_строки.html
include/: config.h  log.h  security_purify.h  smsadmin.h  smsadmin_general.h  smsadmin_json.h  translation.h
include/sms16gapi/: constants.h  errors_codes.h  req_balance.h  req_operator.h  req_send.h  req_state.h  request.h  sms16gapi  sms16gapi.h
include/sms16xapi/: balance.h  constants.h  object.h  req_balance.h  req_sms.h  req_status.h  sms.h  sms16xapi  sms16xapi.h  status.h
rpm/: README  smsadmin.el6.x86_64.spec  smsadmin.rh7.x86_64.spec
src/: config.cpp  entity.cpp  log.cpp  main.cpp  security_purify.cpp  smsadmin.cpp  smsadmin_general.cpp  smsadmin_json.cpp  translation.cpp
src/sms16gapi/: error_codes.cpp  req_balance.cpp  req_operator.cpp  req_send.cpp  req_state.cpp  request.cpp
src/sms16xapi/: balance.cpp  object.cpp  req_balance.cpp  req_sms.cpp  req_status.cpp  sms.cpp  status.cpp
